--- a/BackEnd/.env.example
+++ b/BackEnd/.env.example
@@ -7,3 +7,5 @@ MONGODB_URI=mongodb://localhost:27017/stock_db
 # JWT
 JWT_SECRET=mi-secreto-super-seguro-para-jwt
 JWT_EXPIRES_IN=1d
+
+FRONTEND_ORIGIN=http://localhost:5173
